--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <br></br>
             <figure>
-              <p align="center"><img src="MainFigure.jpg" width="100%" class="center" /></p>
+              <p align="center"><img src="DisSR.png" width="100%" class="center" /></p>
               <figcaption>
                 <p style="text-align: justify;">
                   <font color="061E61"><b>Figure 1:</b> Overview of AudioLDM design for text-to-audio generation (left),
