--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </h1>
           <br></br>
           <p style="line-height:1" align="center"><b>
-              <font color="061E61">Ziqi Liang<sup>*1,2</sup>, Xulong Zhang<sup>*1</sup>, Jianzong Wang<sup>1</sup>, Ning Cheng<sup>1</sup>, Jing Xiao<sup>1</sup></font>
+              <font color="061E61">Ziqi Liang<sup>1,2*</sup>, Xulong Zhang<sup>1*</sup>, Jianzong Wang<sup>1</sup>, Ning Cheng<sup>1</sup>, Jing Xiao<sup>1</sup></font>
             </b></p>
           <p style="line-height:0.6" align="center">
             <font color="061E61"><sup>1</sup>Ping An Technology (Shenzhen) Co., Ltd., Shenzhen, China</font>
@@ -84,6 +84,7 @@ In addition, we propose an optimization strategy to enhance the adaptability and
             <br></br>
             <figure>
               <p align="center"><img src="DisSR.png" width="100%" class="center" /></p>
+              <!--
               <figcaption>
                 <p style="text-align: justify;">
                   <font color="061E61"><b>Figure 1:</b> Overview of AudioLDM design for text-to-audio generation (left),
@@ -95,7 +96,10 @@ In addition, we propose an optimization strategy to enhance the adaptability and
                     The block Forward Diffusion denotes the process that corrupt data with gaussian noise.
                 </p>
               </figcaption>
+              -->
             </figure>
+
+            <!--
             <table class="table" align="center" style="table-layout: fixed;word-break:break-word">
               <thead>
                 <tr>
@@ -121,7 +125,7 @@ In addition, we propose an optimization strategy to enhance the adaptability and
                 </tr>
               </tbody>
             </table>
-            
+            -->
 
             <!--
 <br></br>
