--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </font>
           </h1>
           <br></br>
+
+          <!--
           <p style="line-height:1" align="center"><b>
               <font color="061E61">Ziqi Liang<sup>1,2*</sup>, Xulong Zhang<sup>1*</sup>, Jianzong Wang<sup>1</sup>, Ning Cheng<sup>1</sup>, Jing Xiao<sup>1</sup></font>
             </b></p>
@@ -45,6 +47,12 @@
           <p style="line-height:1" align="center">
             <font color="061E61"><sup>*</sup>Equal Contribution</font>
           </p>
+          -->
+
+          <p style="line-height:1" align="center"><b>
+              <font color="061E61">Anonymous
+            </b></p>
+          
           <section itemprop="entry-text">
             <br>
             <div class="container">
