--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ In addition, we propose an optimization strategy to enhance the adaptability and
             -->
             
             <br></br>
+            <h2 id="pipeline">
+              <font color="000093">Pipeline</font>
+            </h2>
+            <p style="text-align: justify;">
             <figure>
               <p align="center"><img src="DisSR.png" width="100%" class="center" /></p>
               <!--
