--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <br>
             <div class="container">
               <center>
-                <p><a href="https://itspsp.github.io/DisSR/">[Paper on ArXiv]</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/itspsp/DisSR-main">[Code on GitHub]</a></p>
+                <p><a href="https://github.com/itspsp/DisSR-main">[Code on GitHub]</a></p>
               </center>
             </div>
             <h2 id="abstract">
