--- a/index.html
+++ b/index.html
@@ -141,46 +141,65 @@ In addition, we propose an optimization strategy to enhance the adaptability and
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row"><img src="samples/5_inpainting/audio_removed_png/YfvOZ_L5EY0k.png" width="90%"></th>
-                  <th scope="row"><img src="samples/5_inpainting/audio_inpainted_png/YfvOZ_L5EY0k.png" width="90%"></th>
-                  <th scope="row"><img src="samples/5_inpainting/gt_png/YfvOZ_L5EY0k.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/0-input.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/vctk/0-vf.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/0-self.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/0-DisSR.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/0-groundtruth.png" width="90%"></th>
                 </tr>
                 <tr>
                   <th scope="row"><audio controls="controls">
-                      <source src="samples/5_inpainting/audio_removed/YfvOZ_L5EY0k.wav" autoplay />Your browser does not
+                      <source src="output/band-limited/wav/jsut/0-input.wav" autoplay />Your browser does not
                       support the audio element.
                     </audio></th>
                   <th scope="row"><audio controls="controls">
-                      <source src="samples/5_inpainting/audio_inpainted/YfvOZ_L5EY0k.wav" autoplay />Your browser does
+                      <source src="output/band-limited/wav/vctk/0-vf.wav" autoplay />Your browser does
                       not support the audio element.
                     </audio></th>
                   <th scope="row"><audio controls="controls">
-                      <source src="samples/5_inpainting/gt/YfvOZ_L5EY0k.wav" autoplay />Your browser does not support
+                      <source src="output/band-limited/wav/jsut/0-self.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/0-DisSR.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/0-groundtruth.wav" autoplay />Your browser does not support
                       the audio element.
                     </audio></th>
                 </tr>
+                
                 <tr>
-                  <td><img src="samples/5_inpainting/audio_removed_png/YQ93n3dvaaTI.png" width="90%"></td>
-                  <td><img src="samples/5_inpainting/audio_inpainted_png/YQ93n3dvaaTI.png" width="90%"></td>
-                  <td><img src="samples/5_inpainting/gt_png/YQ93n3dvaaTI.png" width="90%"></td>
-
+                  <th scope="row"><img src="output/band-limited/fig/jsut/3-input.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/vctk/3-vf.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/3-self.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/3-DisSR.png" width="90%"></th>
+                  <th scope="row"><img src="output/band-limited/fig/jsut/3-groundtruth.png" width="90%"></th>
                 </tr>
                 <tr>
-                  <td><audio controls="controls">
-                      <source src="samples/5_inpainting/audio_removed/YQ93n3dvaaTI.wav" autoplay />Your browser does not
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/3-input.wav" autoplay />Your browser does not
                       support the audio element.
-                    </audio></td>
-                  <td><audio controls="controls">
-                      <source src="samples/5_inpainting/audio_inpainted/YQ93n3dvaaTI.wav" autoplay />Your browser does
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/vctk/3-vf.wav" autoplay />Your browser does
                       not support the audio element.
-                    </audio></td>
-
-                  <td><audio controls="controls">
-                      <source src="samples/5_inpainting/gt/YQ93n3dvaaTI.wav" autoplay />Your browser does not support
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/3-self.wav" autoplay />Your browser does not support
                       the audio element.
-                    </audio></td>
-
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/3-DisSR.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/3-groundtruth.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
                 </tr>
+                
                 <tr>
 
                   <td><img src="samples/5_inpainting/audio_removed_png/YxQVmVBO8YJc.png" width="90%"></td>
