--- a/index.html
+++ b/index.html
@@ -116,25 +116,25 @@ In addition, we propose an optimization strategy to enhance the adaptability and
         
 
             <br></br>
-            <h2 id="Text-Guided Audio Inpainting with Original Text Prompt">
+            <h2 id="Evaluation Results on Band-limited (LibriTTS -> VCTK)">
               <font color="000093">Evaluation Results on Band-limited (LibriTTS -> VCTK)</font>
             </h2>
             <table class="table" align="center" style="table-layout: fixed;word-break:break-word">
               <thead>
                 <tr>
-                  <th scope="col" width="30%">
+                  <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">Original</font>
                   </th>
-                  <th scope="col" width="30%">
+                  <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">VoiceFixer</font>
                   </th>
-                  <th scope="col" width="30%">
+                  <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">SelfRemaster</font>
                   </th>
-                  <th scope="col" width="30%">
+                  <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">DisSR</font>
                   </th>
-                  <th scope="col" width="30%">
+                  <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">Ground-Truth</font>
                   </th>
                 </tr>
