--- a/index.html
+++ b/index.html
@@ -169,6 +169,32 @@ In addition, we propose an optimization strategy to enhance the adaptability and
                       the audio element.
                     </audio></th>
                 </tr>
+
+                <tr>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/0-input.wav" autoplay />Your browser does not
+                      support the audio element.
+                    </audio></th>
+                </tr>
+                <tr>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/vctk/0-vf.wav" autoplay />Your browser does
+                      not support the audio element.
+                    </audio></th>
+                </tr>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/0-self.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/0-DisSR.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
+                  <th scope="row"><audio controls="controls">
+                      <source src="output/band-limited/wav/jsut/0-groundtruth.wav" autoplay />Your browser does not support
+                      the audio element.
+                    </audio></th>
+                </tr>
                 
                 <tr>
                   <th scope="row"><img src="output/band-limited/fig/jsut/3-input.png" width="90%"></th>
