--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ In addition, we propose an optimization strategy to enhance the adaptability and
               <thead>
                 <tr>
                   <th scope="col" width="30%" style="text-align: center;">
-                    <font color="061E61">Original</font>
+                    <font color="061E61">Distorted</font>
                   </th>
                   <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">VoiceFixer</font>
@@ -198,7 +198,7 @@ In addition, we propose an optimization strategy to enhance the adaptability and
               <thead>
                 <tr>
                   <th scope="col" width="30%" style="text-align: center;">
-                    <font color="061E61">Original</font>
+                    <font color="061E61">Distorted</font>
                   </th>
                   <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">VoiceFixer</font>
@@ -286,7 +286,7 @@ In addition, we propose an optimization strategy to enhance the adaptability and
               <thead>
                 <tr>
                   <th scope="col" width="30%" style="text-align: center;">
-                    <font color="061E61">Original</font>
+                    <font color="061E61">Distorted</font>
                   </th>
                   <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">VoiceFixer</font>
@@ -373,7 +373,7 @@ In addition, we propose an optimization strategy to enhance the adaptability and
               <thead>
                 <tr>
                   <th scope="col" width="30%" style="text-align: center;">
-                    <font color="061E61">Original</font>
+                    <font color="061E61">Distorted</font>
                   </th>
                   <th scope="col" width="30%" style="text-align: center;">
                     <font color="061E61">VoiceFixer</font>
