--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="alternate" href="index.xml" type="application/rss+xml" title="Speech Research">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-  <title>DisSR: Disentangling Speech Representation for Degradation-Prior Guided Cross-Domain Speech Restoration</title>
+  <title>DisSR: Disentangling Speech Representation for Prior Guided General Speech Restoration</title>
 </head>
 
 <body rightmargin="150" leftmargin="150" topmargin="100" bottommargin="100" line-height:160%>
